tests/rosetta/transpiler/C/bell-numbers.error
compile failed: exit status 1: /tmp/ctranspile1946616782/bell-numbers.mochi.c: In function ‘_mem’:
/tmp/ctranspile1946616782/bell-numbers.mochi.c:69:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   69 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1946616782/bell-numbers.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1946616782/bell-numbers.mochi.c: In function ‘user_main’:
/tmp/ctranspile1946616782/bell-numbers.mochi.c:116:51: warning: implicit declaration of function ‘padStart’ [-Wimplicit-function-declaration]
  116 |         puts(str_concat(str_concat(str_concat("", padStart(str_int(i), 2, " ")), ": "), str_int(bt[i][0])));
      |                                                   ^~~~~~~~
/tmp/ctranspile1946616782/bell-numbers.mochi.c:116:51: warning: passing argument 2 of ‘str_concat’ makes pointer from integer without a cast [-Wint-conversion]
  116 |         puts(str_concat(str_concat(str_concat("", padStart(str_int(i), 2, " ")), ": "), str_int(bt[i][0])));
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                   |
      |                                                   int
/tmp/ctranspile1946616782/bell-numbers.mochi.c:10:52: note: expected ‘const char *’ but argument is of type ‘int’
   10 | static char* str_concat(const char *a, const char *b) {
      |                                        ~~~~~~~~~~~~^
/tmp/ctranspile1946616782/bell-numbers.mochi.c:122:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
  122 |         printf("%d\n", bt[i]);
      |                 ~^     ~~~~~
      |                  |       |
      |                  int     int *
      |                 %ls
/usr/bin/ld: /tmp/ccuY4cBt.o: in function `user_main':
bell-numbers.mochi.c:(.text+0x640): undefined reference to `padStart'
collect2: error: ld returned 1 exit status

