tests/rosetta/transpiler/C/bell-numbers.c
// Generated by Mochi 0.10.32 on 2025-07-27 18:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t bellTriangle_len;
size_t *bellTriangle_lens;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static int** list_append_intptr(int **arr, size_t *len, int *val) {
    arr = realloc(arr, (*len + 1) * sizeof(int*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

int * * bellTriangle(int n);
int user_main();
int main(void);

int * * bellTriangle(int n) {
    int **tri = NULL;
    size_t tri_len = 0;
    size_t *tri_lens = NULL;
    size_t tri_lens_len = 0;
    int i = 0;
    while (i < n) {
        int *row = NULL;
        size_t row_len = 0;
        int j = 0;
        while (j < i) {
            row = list_append_int(row, &row_len, 0);
            j = j + 1;
        }
        tri = list_append_intptr(tri, &tri_len, row);
        tri_lens = list_append_szt(tri_lens, &tri_lens_len, row_len);
        i = i + 1;
    }
    tri[1][0] = 1;
    i = 2;
    while (i < n) {
        tri[i][0] = tri[i - 1][i - 2];
        int j = 1;
        while (j < i) {
            tri[i][j] = tri[i][j - 1] + tri[i - 1][j - 1];
            j = j + 1;
        }
        i = i + 1;
    }
    return bellTriangle_lens = tri_lens, bellTriangle_len = tri_len, tri;
}

int user_main() {
    int **bt = bellTriangle(51);
    size_t bt_len = bellTriangle_len;
    size_t *bt_lens = bellTriangle_lens;
    size_t bt_lens_len = bellTriangle_len;
    puts("First fifteen and fiftieth Bell numbers:");
    for (int i = 1; i < 16; i++) {
        puts(str_concat(str_concat(str_concat("", padStart(str_int(i), 2, " ")), ": "), str_int(bt[i][0])));
    }
    puts(str_concat("50: ", str_int(bt[50][0])));
    puts("");
    puts("The first ten rows of Bell's triangle:");
    for (int i = 1; i < 11; i++) {
        printf("%d\n", bt[i]);
    }
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
